Added response for the wrong guess

--- a/JSguessTheNumber/styles.css
+++ b/JSguessTheNumber/styles.css
@@ -52,7 +52,7 @@ button {
 
   color: #FFFFFF;
   font-weight: 700;
-  line-height: 21px;
+  line-height: 2.1rem;
   cursor: pointer;
 
   transition: background .3s;
